--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "description": "Catálogo de propiedades inmobiliarias moderno y responsive",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && cp -r img dist/",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
