--- a/package.json
+++ b/package.json
@@ -6,12 +6,22 @@
   "description": "Catálogo de propiedades inmobiliarias moderno y responsive",
   "scripts": {
     "dev": "vite",
+    "server": "node server/index.js",
+    "dev:full": "concurrently \"npm run server\" \"npm run dev\"",
     "build": "tsc && vite build && cp -r img dist/",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
+    "@types/multer": "^2.0.0",
+    "@types/pg": "^8.15.5",
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "lucide-react": "^0.263.1",
+    "multer": "^2.0.2",
+    "pg": "^8.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.8.2"
@@ -21,6 +31,7 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^5.0.0",
+    "concurrently": "^9.2.1",
     "typescript": "^5.9.2",
     "vite": "^7.1.2"
   },
