--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
   "dependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/leaflet": "^1.9.20",
     "@types/multer": "^2.0.0",
     "@types/pg": "^8.15.5",
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "leaflet": "^1.9.4",
     "lucide-react": "^0.263.1",
     "multer": "^2.0.2",
     "pg": "^8.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.8.2"
   },
   "devDependencies": {
