--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/multer": "^2.0.0",
     "@types/pg": "^8.15.5",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.263.1",
