docs: Actualizar configuración de Supabase Connection Pooler
- Actualizar env.example con configuración correcta del Session Pooler
- Actualizar DEPLOY_GUIDE.md con instrucciones para Connection Pooler
- Especificar uso de Session Mode (puerto 5432) para aplicaciones persistentes
- Agregar troubleshooting para errores de conexión con pooler

--- a/env.example
+++ b/env.example
@@ -9,11 +9,13 @@ DB_USER=postgres
 DB_PASSWORD=password
 DB_SSL=false
 
-# Producción (Supabase)
-# DB_HOST=db.xxxxx.supabase.co
+# Producción (Supabase - Connection Pooler Session Mode)
+# IMPORTANTE: Usa el Connection Pooler en Session Mode (puerto 5432) para aplicaciones persistentes
+# Obtén estos valores en: Supabase Dashboard → Settings → Database → Connection Pooler → Session Mode
+# DB_HOST=aws-1-sa-east-1.pooler.supabase.com
 # DB_PORT=5432
 # DB_NAME=postgres
-# DB_USER=postgres
+# DB_USER=postgres.vyfntmpzjgrkfylpooei  # Formato: postgres.[PROJECT-ID]
 # DB_PASSWORD=tu-password-supabase
 # DB_SSL=true
 
