--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@googlemaps/js-api-loader": "^2.0.2",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
     "@types/leaflet": "^1.9.20",
