Feat: Integrar Supabase Storage para imágenes de propiedades
- Agregar dependencia @supabase/supabase-js
- Crear configuración de Supabase Storage (server/config/supabase.js)
- Modificar middleware de upload para usar Supabase Storage con fallback local
- Actualizar rutas de propiedades para subir imágenes a Supabase Storage
- Agregar variables de entorno para configuración de Supabase
- Crear guía de configuración (SUPABASE_STORAGE_SETUP.md)
- Bucket por defecto: PropertyImages

--- a/env.example
+++ b/env.example
@@ -47,3 +47,11 @@ VITE_API_URL=http://localhost:3001
 # Obtén tu API key en: https://console.cloud.google.com/
 # APIs necesarias: Maps JavaScript API, Geocoding API, Places API
 VITE_GOOGLE_MAPS_API_KEY=TU_API_KEY_AQUI
+
+# ============================================
+# Supabase Storage (para imágenes)
+# ============================================
+# Obtén estos valores en: Supabase Dashboard → Settings → API
+# SUPABASE_URL=https://tu-proyecto.supabase.co
+# SUPABASE_SERVICE_ROLE_KEY=tu-service-role-key-aqui
+# SUPABASE_STORAGE_BUCKET=PropertyImages
