--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "pg": "^8.16.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.8.2"
   },
